--- a/socialLinks/index.html
+++ b/socialLinks/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title> Social Media Button</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/mina998/web@styles/socialLinks/social.css">
+  <link rel="stylesheet" href="./social.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/mina998/web@styles/socialLinks/fontawesome-free-6.4.0-web/css/all.min.css"/>
 </head>
 <body>
